# invaders

./: .gitignore  CMakeLists.txt
include/: Entity.h  EntityManager.h  entity.h  game.h  graphic.h  invaders.h
spdlog/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake
spdlog/tests/: CTestTestfile.cmake  spdlog-utests
src/: EntityManager.cpp  game.cpp  graphic.cpp  main.cpp
